<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rlOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/ivShowTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/showtime" />

        <TextView
            android:id="@+id/tvShowTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="SHOWTIME"
            android:textColor="#440202"
            android:textSize="26dp"/>

        <TextView
            android:id="@+id/tvGurdian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="70dp"
            android:paddingTop="10dp"
            android:text="Register as a Gurdian"
            android:textColor="#1D2E86"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_toEndOf="@id/rlOne"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            android:textColor="#F44336"
            android:textSize="20dp"/>


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="eg. Mg Mg "
            android:inputType="textPersonName">
        </EditText>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email"
            android:textColor="#F44336"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="mgmg@gmail.com">

        </EditText>

        <TextView
            android:id="@+id/tvPhno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_phone_number"
            android:textColor="#F44336"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/etPhno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="09xxxxx">

        </EditText>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:textColor="#F44336"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="********">

        </EditText>

        <TextView
            android:id="@+id/tvConfirmPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirm_password"
            android:textColor="#F44336"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/etConfirmPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="********">
        </EditText>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_chk_agree">
        </CheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sign_up"
                android:textColor="#F44336"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <Button
                android:id="@+id/btnContinue"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_continue"
                android:textColor="#F44336" />

        </LinearLayout>



    </LinearLayout>


</LinearLayout>