<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PROFILE"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_24dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:weightSum="8"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="114dp"
            android:layout_height="83dp"
            app:cardCornerRadius="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivPro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/pro1"/>

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_weight="3">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:textColor="#F44336"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tvDataName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:textColor="#94000000"
                android:textSize="@dimen/text_regular_3x"
                android:layout_below="@id/tvName"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_email"
                android:textColor="#F44336"
                android:textSize="20dp"
                android:layout_below="@id/tvDataName"/>

            <TextView
                android:id="@+id/tvDataEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:textColor="#94000000"
                android:textSize="@dimen/text_regular_3x"
                android:layout_below="@id/tvEmail"/>

            <TextView
                android:id="@+id/tvPhno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_phone_number"
                android:textColor="#F44336"
                android:textSize="20dp"
                android:layout_below="@id/tvDataEmail"/>

            <TextView
                android:id="@+id/tvDataPhno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:textColor="#94000000"
                android:textSize="@dimen/text_regular_3x"
                android:layout_below="@id/tvPhno"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recently Likes"
                android:textColor="#3F51B5"
                android:layout_weight="1"
                android:textSize="26dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_card_medium_2"
                    app:cardCornerRadius="@dimen/margin_medium">

                    <ImageView
                        android:id="@+id/ivLike1"
                        android:layout_width="170dp"
                        android:layout_height="250dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ironman" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_card_medium_2"
                    app:cardCornerRadius="@dimen/margin_medium">

                    <ImageView
                        android:id="@+id/ivLike2"
                        android:layout_width="170dp"
                        android:layout_height="250dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/frozen" />

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-20dp"
                android:text="Star Wars"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="Frozen"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintStart_toEndOf="@id/tvOne"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>